# Cmake_Demo

./: .gitignore  CMakeLists.txt  main.cpp
AddLib/: CMakeLists.txt  add.cpp  add.h
